# vigil

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  refer.md  render.yaml
apps/web/: middleware.ts  next.config.ts  package-lock.json  package.json  vitest.config.ts
apps/web/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
apps/web/app/alerts/: error.tsx  loading.tsx  page.tsx
apps/web/app/judgments/: error.tsx  loading.tsx  page.tsx
apps/web/app/login/: layout.tsx  page.tsx
apps/web/app/settings/: error.tsx  loading.tsx  page.tsx
apps/web/app/watches/: error.tsx  loading.tsx  page.tsx
apps/web/components/alerts/: notification-table.tsx
apps/web/components/dashboard/: court-distribution.tsx  match-trend-chart.tsx  recent-matches.tsx  (+2 more)
apps/web/lib/: constants.ts  fonts.ts  utils.ts
apps/web/tests/: setup.ts
apps/worker/: .env.example  Dockerfile  README.md  pyproject.toml
apps/worker/tests/: conftest.py  test_captcha_solver.py  test_config.py  test_ik_client.py  test_integration_polling_flow.py  test_main.py  test_matcher.py  test_matcher_sc.py  test_notifier.py  test_polling.py  test_polling_sc.py  test_query_builder.py  test_sc_client.py  test_sc_matcher.py  test_schema.py  test_supabase_client.py
apps/worker/vigil/: __init__.py  captcha_solver.py  config.py  ik_client.py  main.py  matcher.py  notifier.py  polling.py  query_builder.py  sc_client.py  sc_matcher.py  supabase_client.py
supabase/: config.toml
supabase/migrations/: 001_initial_schema.sql  002_multi_source_support.sql
(+58 files in other folders)
