[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vigil-worker"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "supabase>=2.0.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
    "pydantic-settings>=2.1.0",
    "aiosmtplib>=3.0.0",
    "python-dateutil>=2.9.0",
    "beautifulsoup4>=4.12.0",
    "pymupdf>=1.24.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "opencv-python-headless>=4.8.0",
    "easyocr>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "pytest-mock>=3.14.0",
    "freezegun>=1.4.0",
    "ruff>=0.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Pure unit tests",
    "integration: Multi-module tests",
    "db: Tests against Supabase",
]
